--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <div class="event-upload">
         <label class="file-type">Select file Type</label>
         <select class="select-file-type" id="select-file-type">
-          <option value="" disabled selected>Select file type</option>
+          <option value="" disabled selected>Select Task file First</option>
           <option value="task">Task</option>
           <option value="event">Event</option>
         </select>
         <div class="file-input">
           <input type="file" id="fileInput" accept=".csv" />
         </div>
-        <button class="submit" onclick="handleSubmit()">Submit</button>
+        <button class="submit"  onclick="handleSubmit()">Submit</button>
       </div>
     </div>
 
